Updating after ages

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,7 @@ bind _ run "sh ~/bin/dotfiles/tmux/zoom.sh"
 bind -n S-Right next-window
 bind -n S-Left previous-window
 bind -t vi-copy Enter copy-pipe "pbcopy"
+bind b break-pane
 
 bind h select-pane -L
 bind j select-pane -D
