--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,14 @@
+# PRO MACINKU !!
+# bind -t vi-copy Enter copy-pipe "pbcopy"
+
+# PRO PRDINKU !!
+bind-key -t vi-copy Enter copy-pipe "xsel -ib > /dev/null"
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip"
+
 # Set Vi mode
 set-window-option -g mode-keys vi
+
+set -g mouse on
 
 # Improve colors
 set -g default-terminal "xterm-256color"
@@ -29,7 +38,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind _ run "sh ~/bin/dotfiles/tmux/zoom.sh"
 bind -n S-Right next-window
 bind -n S-Left previous-window
-bind -t vi-copy Enter copy-pipe "pbcopy"
+
 bind b break-pane
 
 bind h select-pane -L
@@ -45,7 +54,6 @@ set -g message-fg black
 set -g status-left '#[fg=black]#H'
 set -g status-right "#[fg=brown]%d %b %R"
 set -g status-interval 60
-set -g status-utf8 on
 set -g status-justify centre
 
 setw -g monitor-activity on
