Vim plugins - easy align

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ set -g mouse on
 # Improve colors
 set -g default-terminal "xterm-256color"
 
+set -g mouse on
+
 # Set prefix for Ctrl-S
 set -g prefix C-s
 
