Vim backup and tmuxinator setup

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,12 @@
-# PRO MACINKU !!
-# bind -t vi-copy Enter copy-pipe "pbcopy"
+if-shell 'test "$(uname)" = "Linux"' 'bind-key -t vi-copy Enter copy-pipe "xsel -ib > /dev/null"'
 
-# PRO PRDINKU !!
-bind-key -t vi-copy Enter copy-pipe "xsel -ib > /dev/null"
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip"
+if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy Enter copy-pipe "pbcopy"'
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+
+if-shell 'test "$(uname)" = "Darwin"' 'bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"'
 
 # Set Vi mode
 set-window-option -g mode-keys vi
-
-set -g mouse on
 
 # Improve colors
 set -g default-terminal "xterm-256color"
@@ -69,4 +67,7 @@ set -g pane-active-border-bg default
 set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
+
+set-window-option -g pane-base-index 1
+set-option -g base-index 1
 
