Use ale instead of syntastic

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 if-shell 'test "$(uname)" = "Linux"' 'bind-key -t vi-copy Enter copy-pipe "xsel -ib > /dev/null"'
 
-if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy Enter copy-pipe "pbcopy"'
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
-if-shell 'test "$(uname)" = "Darwin"' 'bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"'
+# if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy Enter copy-pipe "pbcopy"'
+# if-shell 'test "$(uname)" = "Darwin"' 'bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"'
 
 # Set Vi mode
 set-window-option -g mode-keys vi
