--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,5 @@
-if-shell 'test "$(uname)" = "Linux"' 'bind-key -t vi-copy Enter copy-pipe "xsel -ib > /dev/null"'
-
-if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
-
-# if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy Enter copy-pipe "pbcopy"'
-# if-shell 'test "$(uname)" = "Darwin"' 'bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"'
-
-# Set Vi mode
-set-window-option -g mode-keys vi
-
-# Improve colors
-set -g default-terminal "xterm-256color"
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 set -g mouse on
 
@@ -20,19 +10,8 @@ set -g prefix C-s
 bind C-a last-window
 bind C-s send-prefix
 
-# Splitting windows
-unbind %
-bind | split-window -h
-bind - split-window -v
-
-# Resizing panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
 # Reload config file
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind R source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Other bindings
 bind _ run "sh ~/bin/dotfiles/tmux/zoom.sh"
@@ -41,18 +20,13 @@ bind -n S-Left previous-window
 
 bind b break-pane
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 set -g status-bg red
 set -g status-fg black
 set -g message-bg white
 set -g message-fg black
 
 set -g status-left '#[fg=black]#H'
-set -g status-right "#[fg=brown]%d %b %R"
+set -g status-right "#[fg=brown]#{prefix_highlight} | Online: #{online_status} | %d %b %R"
 set -g status-interval 60
 set -g status-justify centre
 
@@ -64,10 +38,31 @@ set -g renumber-windows on
 set -g pane-active-border-fg default
 set -g pane-active-border-bg default
 
-set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
 
 set-window-option -g pane-base-index 1
 set-option -g base-index 1
 
+set -g @online_icon "✔"
+
+unbind O
+unbind P
+bind O set synchronize-panes yes
+bind P set synchronize-panes no
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
