Comment out Merck stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,8 +22,8 @@ bind b break-pane
 
 set -g status-bg red
 set -g status-fg black
-set -g message-bg white
-set -g message-fg black
+# set -g message-bg white
+# set -g message-fg black
 
 set -g status-left '#[fg=black]#H'
 set -g status-right "#[fg=brown]#{prefix_highlight} | Online: #{online_status} | %d %b %R"
@@ -35,8 +35,8 @@ set -g visual-activity
 
 set -g renumber-windows on
 
-set -g pane-active-border-fg default
-set -g pane-active-border-bg default
+# set -g pane-active-border-fg default
+# set -g pane-active-border-bg default
 
 set -g base-index 1
 set -g pane-base-index 1
