--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango:Fantasque 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,30 +36,53 @@ bindsym $mod+Return exec urxvt -e tmux
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# class                 border  bground text    indicator child_border
-client.focused          #5E4147 #BA808C #FFFFFF #F476B9   #285577
-client.focused_inactive #6D255F #3F1537 #FFFFFF #484E50   #5F676A
-client.unfocused        #6D255F #3F1537 #FFFFFF #292D2E   #222222
-client.urgent           #3A0000 #900000 #FFFFFF #900000   #900000
-client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
+## Base16 Monokai
+# Author: Wimer Hazenberg (http://www.monokai.nl)
+# You can use these variables anywhere in the i3 configuration file.
 
-client.background       #FFFFFF
+set $base00 #272822
+set $base01 #383830
+set $base02 #49483e
+set $base03 #75715e
+set $base04 #a59f85
+set $base05 #f8f8f2
+set $base06 #f5f4f1
+set $base07 #f9f8f5
+set $base08 #f92672
+set $base09 #fd971f
+set $base0A #f4bf75
+set $base0B #a6e22e
+set $base0C #a1efe4
+set $base0D #66d9ef
+set $base0E #ae81ff
+set $base0F #cc6633
 
+# Basic bar configuration using the Base16 variables.
 # bar {
-#   status_command i3status
+#     status_command i3status
 #
-#   colors {
-#     background #000000
-#     statusline #FFFFFF
-#     separator  #666666
+#     colors {
+#         background $base00
+#         separator  $base01
+#         statusline $base04
 #
-#     focused_workspace  #4C7899 #DC88A7 #000000
-#     active_workspace   #333333 #222222 #FFFFFF
-#     inactive_workspace #333333 #222222 #888888
-#     urgent_workspace   #2F343A #900000 #FFFFFF
-#     binding_mode       #2F343A #900000 #FFFFFF
-#   }
+#         # State             Border  BG      Text
+#         focused_workspace   $base05 $base0D $base00
+#         active_workspace    $base05 $base03 $base00
+#         inactive_workspace  $base03 $base01 $base05
+#         urgent_workspace    $base08 $base08 $base00
+#         binding_mode        $base00 $base0A $base00
+#     }
 # }
+#
+# Basic color configuration using the Base16 variables for windows and borders.
+# Property Name         Border  BG      Text    Indicator Child Border
+client.focused          $base07 $base0D $base00 $base08 $base08
+client.focused_inactive $base01 $base01 $base05 $base00 $base01
+client.unfocused        $base01 $base00 $base05 $base00 $base01
+client.urgent           $base08 $base08 $base00 $base00 $base08
+client.placeholder      $base00 $base00 $base05 $base00 $base00
+client.background       $base07
 
 bindsym $mod+p exec "dmenu_run -nf '#BBBBBB' -nb '#222222' -sb '#9C5C8F' -sf '#EEEEEE' -fn 'monospace-12'"
 
@@ -267,4 +290,6 @@ mode "$mode_gaps_outer" {
 }
 
 exec_always /home/shosanna/.config/polybar/launch.sh
-exec_always /home/shosanna/Programming/feh-blur
+exec_always /home/shosanna/Programming/feh-blur -b 4 --darken 4 --no-animate
+exec_always feh --bg-fill ~/Documents/wallpapers/0263.jpg
+exec compton -f
