--- a/tmux.conf
+++ b/tmux.conf
@@ -51,6 +51,9 @@ unbind P
 bind O set synchronize-panes yes
 bind P set synchronize-panes no
 
+set -g @yank_with_mouse on
+set -g @yank_selection_mouse 'clipboard'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -61,7 +64,7 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+# set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
