Switch to zenburn and COC

--- a/rofi-example.config
+++ b/rofi-example.config
@@ -1,5 +1,5 @@
 ! "Enabled modi" Set from: Rasi File
-rofi.modi:                           combi,:rofind
+! rofi.modi:                           combi,:rofind
 ! "Window width" Set from: Default
 ! rofi.width:                          50
 ! "Number of lines" Set from: Default
@@ -21,7 +21,7 @@ rofi.modi:                           combi,:rofind
 ! "Always show number of lines" Set from: Default
 ! rofi.fixed-num-lines:                true
 ! "Whether to load and show icons" Set from: Rasi File
-rofi.show-icons:                     true
+! rofi.show-icons:                     true
 ! "Terminal to use" Set from: Default
 ! rofi.terminal:                       rofi-sensible-terminal
 ! "Ssh client to use" Set from: Default
@@ -69,7 +69,7 @@ rofi.show-icons:                     true
 ! "Parse known_hosts file for ssh mode" Set from: Default
 ! rofi.parse-known-hosts:              true
 ! "Set the modi to combine in combi mode" Set from: Rasi File
-rofi.combi-modi:                     window,drun,run
+! rofi.combi-modi:                     window,drun,run
 ! "Set the matching algorithm. (normal, regex, glob, fuzzy)" Set from: Default
 ! rofi.matching:                       normal
 ! "Tokenize input string" Set from: Default
@@ -97,7 +97,7 @@ rofi.combi-modi:                     window,drun,run
 ! "Scrollbar width *DEPRECATED*" Set from: Default
 ! rofi.scrollbar-width:                8
 ! "Scrolling method. (0: Page, 1: Centered)" Set from: Rasi File
-rofi.scroll-method:                  1
+! rofi.scroll-method:                  1
 ! "Background to use for fake transparency. (background or screenshot) *DEPRECATED*" Set from: Default
 ! rofi.fake-background:                screenshot
 ! "Window Format. w (desktop name), t (title), n (name), r (role), c (class)" Set from: Default
@@ -127,17 +127,17 @@ rofi.scroll-method:                  1
 ! "Pidfile location" Set from: Default
 ! rofi.pid:                            /run/user/1000/rofi.pid
 ! "The display name of this browser" Set from: Rasi File
-rofi.display-window:                 
+! rofi.display-window:                 
 ! "The display name of this browser" Set from: Default
 ! rofi.display-windowcd:               
 ! "The display name of this browser" Set from: Rasi File
-rofi.display-run:                    #! 
+! rofi.display-run:                    #! 
 ! "The display name of this browser" Set from: Rasi File
-rofi.display-ssh:                    ssh
+! rofi.display-ssh:                    ssh
 ! "The display name of this browser" Set from: Rasi File
-rofi.display-drun:                   
+! rofi.display-drun:                   
 ! "The display name of this browser" Set from: Rasi File
-rofi.display-combi:                  Go to
+! rofi.display-combi:                  Go to
 ! "The display name of this browser" Set from: Default
 ! rofi.display-keys:                   
 ! "Paste primary selection" Set from: Default
@@ -279,9 +279,9 @@ rofi.display-combi:                  Go to
 ! "Select next entry" Set from: Default
 ! rofi.ml-row-down:                    ScrollDown
 ! "Select hovered row" Set from: Rasi File
-rofi.me-select-entry:                MouseSecondary
+! rofi.me-select-entry:                MouseSecondary
 ! "Accept hovered row" Set from: Rasi File
-rofi.me-accept-entry:                MousePrimary
+! rofi.me-accept-entry:                MousePrimary
 ! "Accept hovered row with custom action" Set from: Default
 ! rofi.me-accept-custom:               Control+MouseDPrimary
 
@@ -290,17 +290,14 @@ rofi.me-accept-entry:                MousePrimary
 !                  'background', 'border', 'separator'
 rofi.color-window: argb:c82d303b, #7c8389, #1d1f21
 ! State:           'bg',     'fg',     'bgalt',  'hlbg',   'hlfg'
-rofi.color-normal: argb:031d1f21, #f3f4f5, argb:031d1f21, argb:031d1f21, #f92672
-rofi.color-urgent: argb:031d1f21, #f3f4f5, argb:bc303541, argb:031d1f21, #f92672
-rofi.color-active: argb:031d1f21, #f3f4f5, argb:031d1f21, argb:031d1f21, #f92672
+rofi.color-normal: argb:031d1f21, #f3f4f5, argb:031d1f21, argb:031d1f21, #dc8cc3
+rofi.color-urgent: argb:031d1f21, #f3f4f5, argb:bc303541, argb:031d1f21, #dc8cc3
+rofi.color-active: argb:031d1f21, #f3f4f5, argb:031d1f21, argb:031d1f21, #dc8cc3
 
-rofi.eh: 1
 rofi.width: 100
-rofi.padding: 500
-rofi.opacity: 85
+rofi.padding: 400
 rofi.lines: 5
-rofi.font: Fantasque 26
+rofi.font: Fantasque 40
 rofi.separator-style: none
-rofi.bw: 0
 rofi.fullscreen: true
 rofi.hide-scrollbar: true
