--- a/i3/config
+++ b/i3/config
@@ -36,26 +36,23 @@ bindsym $mod+Return exec urxvt -e tmux
 # kill focused window
 bindsym $mod+Shift+q kill
 
-## Base16 Monokai
-# Author: Wimer Hazenberg (http://www.monokai.nl)
-# You can use these variables anywhere in the i3 configuration file.
-
-set $base00 #272822
-set $base01 #383830
-set $base02 #49483e
-set $base03 #75715e
-set $base04 #a59f85
-set $base05 #f8f8f2
-set $base06 #f5f4f1
-set $base07 #f9f8f5
-set $base08 #f92672
-set $base09 #fd971f
-set $base0A #f4bf75
-set $base0B #a6e22e
-set $base0C #a1efe4
-set $base0D #66d9ef
-set $base0E #ae81ff
-set $base0F #cc6633
+# Zenburn
+set $base00 #383838
+set $base01 #404040
+set $base02 #606060
+set $base03 #6f6f6f
+set $base04 #808080
+set $base05 #dcdccc
+set $base06 #c0c0c0
+set $base07 #ffffff
+set $base08 #dca3a3
+set $base09 #dfaf8f
+set $base0A #e0cf9f
+set $base0B #5f7f5f
+set $base0C #93e0e3
+set $base0D #7cb8bb
+set $base0E #dc8cc3
+set $base0F #000000
 
 # Basic bar configuration using the Base16 variables.
 # bar {
@@ -290,7 +287,10 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-exec_always /home/shosanna/.config/polybar/launch.sh
-exec_always /home/shosanna/Programming/feh-blur -b 4 --darken 4 --no-animate
+exec_always ~/.config/polybar/launch.sh
+exec_always ~/Programming/feh-blur -b 4 --darken 4 --no-animate
 exec_always feh --bg-fill ~/Documents/wallpapers/0263.jpg
 exec_always compton -f
+# exec_always xrandr --output eDP1 --mode 1680x1050
+# exec xrandr --output eDP1 --mode 1680x1050
+# exec sudo wpa_supplicant -B -i wlp3s0 -c /etc/wpa_supplicant/wpa_supplicant.conf
