--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
+set -g default-terminal 'tmux-256color'
+set-option -sa terminal-overrides ',alacritty:RGB'
+
 set -g mouse on
 
 # Set prefix for Ctrl-S
