Vim stuff from macik

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ set -g prefix C-s
 
 # Switching between windows
 bind C-a last-window
+
+# When I want to use the prefix
 bind C-s send-prefix
 
 # Reload config file
