--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "knihovny/base16-shell"]
 	path = knihovny/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+[submodule "polybar-themes"]
+	path = polybar-themes
+	url = https://github.com/adi1090x/polybar-themes.git
