Fix nord color theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,14 @@
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-set -g default-terminal 'tmux-256color'
-set-option -sa terminal-overrides ',alacritty:RGB'
+# set -g default-terminal 'tmux-256color'
+# set-option -sa terminal-overrides ',alacritty:RGB'
+
+set -g default-terminal 'xterm-256color'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+# set -g default-terminal "alacritty"
+# set -ag terminal-overrides ",alacritty:RGB"
 
 set -g mouse on
 
