--- a/i3/config
+++ b/i3/config
@@ -37,24 +37,46 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 bindsym $mod+grave exec ~/.dotfiles/bin/dmenuunicode
 
-# Zenburn
-set $base00 #383838
-set $base01 #404040
-set $base02 #606060
-set $base03 #6f6f6f
-set $base04 #808080
-set $base05 #dcdccc
-set $base06 #c0c0c0
-set $base07 #ffffff
-set $base08 #dca3a3
-set $base09 #dfaf8f
-set $base0A #e0cf9f
-set $base0B #5f7f5f
-set $base0C #93e0e3
-set $base0D #7cb8bb
-set $base0E #dc8cc3
-set $base0F #000000
+## Base16 Nord
+# Author: arcticicestudio
+#
+# You can use these variables anywhere in the i3 configuration file.
 
+set $base00 #2e3440
+set $base01 #3b4252
+set $base02 #434c5e
+set $base03 #4c566a
+set $base04 #d8dee9
+set $base05 #e5e9f0
+set $base06 #eceff4
+set $base07 #8fbcbb
+set $base08 #bf616a
+set $base09 #d08770
+set $base0A #ebcb8b
+set $base0B #a3be8c
+set $base0C #88c0d0
+set $base0D #81a1c1
+set $base0E #b48ead
+set $base0F #5e81ac
+
+# Zenburn
+# set $base00 #383838
+# set $base01 #404040
+# set $base02 #606060
+# set $base03 #6f6f6f
+# set $base04 #808080
+# set $base05 #dcdccc
+# set $base06 #c0c0c0
+# set $base07 #ffffff
+# set $base08 #dca3a3
+# set $base09 #dfaf8f
+# set $base0A #e0cf9f
+# set $base0B #5f7f5f
+# set $base0C #93e0e3
+# set $base0D #7cb8bb
+# set $base0E #dc8cc3
+# set $base0F #000000
+#
 # Basic bar configuration using the Base16 variables.
 # bar {
 #     status_command i3status
