Add kitty & alacritty config

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "polybar-themes"]
 	path = polybar-themes
 	url = https://github.com/adi1090x/polybar-themes.git
+[submodule "kitty/kitty-themes"]
+	path = kitty/kitty-themes
+	url = git@github.com-shosanna:dexpota/kitty-themes.git
