--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ set -g @yank_selection_mouse 'clipboard'
 # set -g @plugin "tmux-plugins/tmux-sensible"
 # set -g @plugin 'tmux-plugins/tmux-pain-control'
 
-set -g @plugin "rose-pine/tmux"
+#set -g @plugin "rose-pine/tmux"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
@@ -74,8 +74,11 @@ set -g @plugin 'tmux-plugins/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'Morantron/tmux-fingers'
-set -g @rose_pine_host "on"
-set -g @rose_pine_date_time "on" # %c is a good value but
+set -g @plugin 'catppuccin/tmux'
+# set -g @rose_pine_host "on"
+# set -g @rose_pine_date_time "on" # %c is a good value but
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
+
+set -g @catppuccin_flavour 'frappe' #
